[package]
name = "tlb-detail"
version = "0.1.0"
authors = ["袁殷 <2212079150@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlink = "0.2"
rlink-derive = "0.2"
rlink-kafka-connector= "0.2"
rlink-clickhouse-connector= "0.2"

log = "0.4.8"

serde = "1.0"
serde_json = "1.0"
chrono="0.4"

serbuffer = "1.1"

[build-dependencies]
serbuffer-gen = "1.0"
